Look for Makefile.rules in the right directory.
git-svn-id: https://llvm.org/svn/llvm-project/klee/trunk@72246 91177308-0d34-0410-b5e6-96231b3b80d8

--- a/Makefile.common
+++ b/Makefile.common
@@ -18,7 +18,7 @@ override ENABLE_PROFILING := $(RUNTIME_ENABLE_PROFILING)
 override ENABLE_COVERAGE := $(RUNTIME_ENABLE_COVERAGE)
 endif
 
-include $(LLVM_OBJ_ROOT)/Makefile.rules
+include $(LLVM_SRC_ROOT)/Makefile.rules
 
 LD.Flags += -L$(PROJ_SRC_ROOT)/stp/lib
 CXX.Flags += -DLLVM_23
