Renamed klee-bout-tool to ktest-tool.
git-svn-id: https://llvm.org/svn/llvm-project/klee/trunk@72306 91177308-0d34-0410-b5e6-96231b3b80d8

--- a/tools/ktest-tool/Makefile
+++ b/tools/ktest-tool/Makefile
@@ -1,4 +1,4 @@
-#===-- tools/klee-bout-tool/Makefile -----------------------*- Makefile -*--===#
+#===-- tools/ktest-tool/Makefile -----------------------*- Makefile -*--===#
 #
 #                     The KLEE Symbolic Virtual Machine
 #
@@ -9,7 +9,7 @@
 
 LEVEL = ../..
 
-TOOLSCRIPTNAME := klee-bout-tool
+TOOLSCRIPTNAME := ktest-tool
 
 include $(LEVEL)/Makefile.common
 
