Rename intrinsic library to libkleeRuntimeInstrinsic, for consistency.
git-svn-id: https://llvm.org/svn/llvm-project/klee/trunk@77797 91177308-0d34-0410-b5e6-96231b3b80d8

--- a/runtime/Intrinsic/Makefile
+++ b/runtime/Intrinsic/Makefile
@@ -9,7 +9,7 @@
 
 LEVEL=../..
 
-LIBRARYNAME=intrinsic
+LIBRARYNAME=kleeRuntimeIntrinsic
 DONT_BUILD_RELINKED=1
 BUILD_ARCHIVE=1
 BYTECODE_LIBRARY=1
