Build klee-replay when the POSIX runtime is enabled.
git-svn-id: https://llvm.org/svn/llvm-project/klee/trunk@78149 91177308-0d34-0410-b5e6-96231b3b80d8

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -16,6 +16,11 @@ LEVEL=..
 # List all of the subdirectories that we will compile.
 #
 PARALLEL_DIRS=klee kleaver ktest-tool gen-random-bout klee-stats
-# FIXME: Move qplayer functionality into kleaver
+
+include $(LEVEL)/Makefile.config
+
+ifeq ($(ENABLE_POSIX_RUNTIME),1)
+PARALLEL_DIRS += klee-replay
+endif
 
 include $(LEVEL)/Makefile.common
