--- a/Makefile.config.in
+++ b/Makefile.config.in
@@ -20,6 +20,9 @@ PROJ_OBJ_ROOT := $(subst //,/,@abs_top_objdir@)
 # Set the root directory of this project's install prefix
 PROJ_INSTALL_ROOT := @prefix@
 
+ENABLE_EXT_STP := @ENABLE_EXT_STP@
+STP_ROOT := @STP_ROOT@
+
 ENABLE_POSIX_RUNTIME := @ENABLE_POSIX_RUNTIME@
 ENABLE_STPLOG := @ENABLE_STPLOG@
 ENABLE_UCLIBC := @ENABLE_UCLIBC@
