--- a/Makefile.common
+++ b/Makefile.common
@@ -48,5 +48,8 @@ endif
 
 CXX.Flags += -DKLEE_DIR=\"$(PROJ_OBJ_ROOT)\"
 
+LD.Flags += -lrt
+CXX.Flags += -DGOOGLE_PROTOBUF_NO_RTTI
+
 %.pb.cc %.pb.h: %.proto
 	$(PROTOC) --cpp_out=./ $<
