--- a/tools/Makefile
+++ b/tools/Makefile
@@ -15,7 +15,7 @@ LEVEL=..
 #
 # List all of the subdirectories that we will compile (without kleaver)
 #
-PARALLEL_DIRS=klee ktest-tool gen-random-bout klee-stats cloud9-worker cloud9-lb kleaver
+PARALLEL_DIRS=klee ktest-tool gen-random-bout klee-stats cloud9-worker cloud9-lb kleaver kleaver2smt
 
 include $(LEVEL)/Makefile.config
 
