--- a/tools/cloud9-worker/Makefile
+++ b/tools/cloud9-worker/Makefile
@@ -5,7 +5,7 @@ include $(LEVEL)/Makefile.config
 
 STP_LIBS := stp_c_interface.a stp_AST.a stp_bitvec.a stp_constantbv.a stp_sat.a \
         stp_simplifier.a
-        
+
 
 USEDLIBS = cloud9worker.a cloud9common.a \
 					 kleeCore.a kleeData.a kleeModule.a kleaverSolver.a kleaverExpr.a \
@@ -19,7 +19,7 @@ LINK_COMPONENTS = jit engine bitreader bitwriter linker ipo
 
 include $(LEVEL)/Makefile.common
 
-LIBS += -lboost_system-mt -lboost_thread-mt -lprotobuf -lglog -lrt -lcrypto++ -lboolector -lpicosat # -lprofiler
+LIBS += -lboost_system-mt -lboost_thread-mt -lprotobuf -lglog -lrt -lcrypto++ -lboolector # -lprofiler
 ifeq ($(ENABLE_EXT_STP),1)
   LIBS += -lstp
 endif
